--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Claudia Lozzano's Website
+title: Clàudia Lozano's Website
 subtitle: This is where I will tell the world about me
 ---
