--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Clàudia Lozano's Website
-subtitle: This is where I will tell the world about me
+title: OmniOmics
+subtitle: Covering a wide range of omics data
 ---
